# url-shortener-rust

./: .env  Cargo.toml
src/: models.rs
src/migrations/: create-url-table.sql
