[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.5", features = ["sqlite", "runtime-actix-rustls"] }
dotenv = "0.15"